fix overflow chrome

--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ body
   padding: 0;
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
+  width: 100vw;
 }
 
 a,
@@ -26,7 +28,6 @@ a:active
 body > *
 {
   position: relative;
-  width: 100vw;
   height: fit-content;
   display: flex;
   padding: 20px 0;
